RESOLVED FIXED223952
REGRESSION (r275172): Many com.apple.WebKit.Networking.Development crashes appearing in "other crashes"
https://bugs.webkit.org/show_bug.cgi?id=223952
Summary REGRESSION (r275172): Many com.apple.WebKit.Networking.Development crashes ap...
Ryan Haddad
Reported 2021-03-30 13:18:39 PDT
While looking at some recent test results, I noticed a lot of com.apple.WebKit.Networking.Development crashes in the "other crashes" section here: https://build.webkit.org/results/Apple-Catalina-Release-WK2-Tests/r275172%20(1369)/results.html Based on result history, I think these started after https://trac.webkit.org/changeset/275172/webkit landed Exception Type: EXC_CRASH (SIGKILL) Exception Codes: 0x0000000000000000, 0x0000000000000000 Exception Note: EXC_CORPSE_NOTIFY Termination Reason: Namespace <0x1F>, Code 0x2 Application Specific Information: dyld: in dlopen_preflight() Thread 0 Crashed:: Dispatch queue: com.apple.main-thread 0 libsystem_kernel.dylib 0x00007fff6a8e6dfa mach_msg_trap + 10 1 libsystem_kernel.dylib 0x00007fff6a8e7170 mach_msg + 60 2 com.apple.CoreFoundation 0x00007fff3073cef5 __CFRunLoopServiceMachPort + 247 3 com.apple.CoreFoundation 0x00007fff3073b9c2 __CFRunLoopRun + 1319 4 com.apple.CoreFoundation 0x00007fff3073ae3e CFRunLoopRunSpecific + 462 5 com.apple.Foundation 0x00007fff32dd61d8 -[NSRunLoop(NSRunLoop) runMode:beforeDate:] + 212 6 com.apple.Foundation 0x00007fff32e88c7f -[NSRunLoop(NSRunLoop) run] + 76 7 libxpc.dylib 0x00007fff6a9f34ea _xpc_objc_main.cold.4 + 49 8 libxpc.dylib 0x00007fff6a9f3430 _xpc_objc_main + 559 9 libxpc.dylib 0x00007fff6a9f2f63 xpc_main + 377 10 com.apple.WebKit 0x000000010fc27082 WebKit::XPCServiceMain(int, char const**) + 266 (XPCServiceMain.mm:209) 11 libdyld.dylib 0x00007fff6a7a5cc9 start + 1
Attachments
Patch (3.69 KB, patch)
2021-03-30 13:34 PDT, Alex Christensen
no flags
Radar WebKit Bug Importer
Comment 1 2021-03-30 13:18:47 PDT
Alex Christensen
Comment 2 2021-03-30 13:34:49 PDT
Geoffrey Garen
Comment 3 2021-03-30 15:26:59 PDT
Comment on attachment 424685 [details] Patch r=me Seems like a good way to return to previous behavior. But... don't we want crash reports?
Alex Christensen
Comment 4 2021-03-30 15:32:45 PDT
Comment on attachment 424685 [details] Patch Not with these calls we don't.
EWS
Comment 5 2021-03-30 16:00:44 PDT
Committed r275244: <https://commits.webkit.org/r275244> All reviewed patches have been landed. Closing bug and clearing flags on attachment 424685 [details].
Note You need to log in before you can comment on or make changes to this bug.