REGRESSION (r275172): Many com.apple.WebKit.Networking.Development crashes appearing in "other crashes" https://bugs.webkit.org/show_bug.cgi?id=223952

Patch by Alex Christensen <achristensen@webkit.org> on 2021-03-30
Reviewed by Geoffrey Garen.

Use OS_REASON_FLAG_NO_CRASH_REPORT to prevent crash reports.  xpc_connection_kill didn't generate crash reports.

* Platform/IPC/cocoa/ConnectionCocoa.mm:
(IPC::ConnectionTerminationWatchdog::watchdogTimerFired):
(IPC::Connection::kill):
* Platform/spi/Cocoa/ReasonSPI.h:
* UIProcess/Launcher/mac/ProcessLauncherMac.mm:
(WebKit::ProcessLauncher::platformInvalidate):

git-svn-id: https://svn.webkit.org/repository/webkit/trunk@275244 268f45cc-cd09-0410-ab3c-d52691b4dbfc
Canonical link: https://commits.webkit.org/235934@main