Source/WebKit/UIProcess/Launcher/mac/ProcessLauncherMac.mm
@@ -337,7 +337,7 @@ void ProcessLauncher::platformInvalidate()
         return;
 
     xpc_connection_cancel(m_xpcConnection.get());
-    terminate_with_reason(xpc_connection_get_pid(m_xpcConnection.get()), OS_REASON_WEBKIT, static_cast<uint64_t>(WebKit::ReasonCode::Invalidation), "ProcessLauncher::platformInvalidate", 0);
+    terminate_with_reason(xpc_connection_get_pid(m_xpcConnection.get()), OS_REASON_WEBKIT, static_cast<uint64_t>(WebKit::ReasonCode::Invalidation), "ProcessLauncher::platformInvalidate", OS_REASON_FLAG_NO_CRASH_REPORT);
     m_xpcConnection = nullptr;
 }
 
